# chat_bot

./: README.md  main.py  pyproject.toml  requirements.txt
basic_chatbot/: .env  basic_chatbot.ipynb
